Borrado CSHTML Pruebas y CAMAS

--- a/MetroUIPrueba2/MetroUIPrueba2.csproj
+++ b/MetroUIPrueba2/MetroUIPrueba2.csproj
@@ -239,6 +239,13 @@
     <Content Include="Areas\Insumo\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Insumo\Views\Shared\Error.cshtml" />
     <Content Include="Areas\Insumo\Views\Shared\_IntranetLayoutInsumo.cshtml" />
+    <Content Include="Areas\Insumo\Views\Insumo\Disenno.cshtml" />
+    <Content Include="Areas\Insumo\Views\Insumo\ComodasCR.cshtml" />
+    <Content Include="Areas\Insumo\Views\Insumo\Comodas.cshtml" />
+    <Content Include="Areas\Insumo\Views\Insumo\Comedores.cshtml" />
+    <Content Include="Areas\Insumo\Views\Insumo\ClosetsCR.cshtml" />
+    <Content Include="Areas\Insumo\Views\Insumo\Closets.cshtml" />
+    <Content Include="Areas\Insumo\Views\Insumo\Camas.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
