--- a/MetroUIPrueba2/MetroUIPrueba2.csproj
+++ b/MetroUIPrueba2/MetroUIPrueba2.csproj
@@ -270,37 +270,34 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Empleado\Index.cshtml" />
-    <Content Include="Views\Empleado\Nuevo.cshtml" />
-    <Content Include="Views\Empleado\Ver.cshtml" />
-    <Content Include="Views\Empleado\Editar.cshtml" />
+    <Content Include="Views\Empleado\Create.cshtml" />
+    <Content Include="Views\Empleado\View.cshtml" />
+    <Content Include="Views\Empleado\Edit.cshtml" />
     <Content Include="Scripts\metro.min.js.map" />
     <Content Include="Views\Home\PayDocumentUser.cshtml" />
     <Content Include="Views\Producto\Index.cshtml" />
     <Content Include="Views\Home\PayDocumentClient.cshtml" />
     <Content Include="Views\Home\user_client_choose.cshtml" />
-    <Content Include="Views\Producto\Crear.cshtml" />
     <Content Include="Views\Home\product_selected.cshtml" />
     <Content Include="Views\Home\Mesas.cshtml" />
     <Content Include="Views\Producto\Inventario.cshtml" />
     <Content Include="Views\Home\Cart.cshtml" />
-    <Content Include="Views\Proveedor\Crear.cshtml" />
     <Content Include="Views\Proveedor\Index.cshtml" />
     <Content Include="Views\Producto\Comedores.cshtml" />
     <Content Include="Views\Producto\Closets.cshtml" />
     <Content Include="Views\Producto\ClosetsCR.cshtml" />
     <Content Include="Views\Producto\Comodas.cshtml" />
     <Content Include="Views\Producto\Camas.cshtml" />
-    <Content Include="Views\Producto\Nuevo.cshtml" />
-    <Content Include="Views\Producto\Ver.cshtml" />
-    <Content Include="Views\Producto\Editar.cshtml" />
-    <Content Include="Views\Producto\Actualizar.cshtml" />
+    <Content Include="Views\Producto\Create.cshtml" />
+    <Content Include="Views\Producto\View.cshtml" />
+    <Content Include="Views\Producto\Edit.cshtml" />
     <Content Include="Views\Shared\_IntranetLayout.cshtml" />
     <Content Include="Views\Home\Intranet.cshtml" />
     <Content Include="Views\Producto\Disenno.cshtml" />
     <Content Include="Views\Producto\ComodasCR.cshtml" />
-    <Content Include="Views\Proveedor\Nuevo.cshtml" />
-    <Content Include="Views\Proveedor\Editar.cshtml" />
-    <Content Include="Views\Proveedor\Ver.cshtml" />
+    <Content Include="Views\Proveedor\Create.cshtml" />
+    <Content Include="Views\Proveedor\Edit.cshtml" />
+    <Content Include="Views\Proveedor\View.cshtml" />
     <Content Include="Views\Shared\_DisennoLayout.cshtml" />
     <Content Include="Views\Home\Disenno.cshtml" />
     <Content Include="Views\Home\Vision.cshtml" />
