--- a/MetroUIPrueba2/MetroUIPrueba2.csproj
+++ b/MetroUIPrueba2/MetroUIPrueba2.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Areas\Gerencia\Controllers\InsumoController.cs" />
     <Compile Include="Areas\Gerencia\Controllers\ProductoController.cs" />
     <Compile Include="Areas\Gerencia\Controllers\ProveedorController.cs" />
+    <Compile Include="Areas\Gerencia\Controllers\RecursoController.cs" />
     <Compile Include="Areas\Gerencia\GerenciaAreaRegistration.cs" />
     <Compile Include="Areas\Insumo\Controllers\InsumoController.cs" />
     <Compile Include="Areas\Insumo\Controllers\RecursoController.cs" />
@@ -148,6 +149,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Almacen.cs" />
     <Compile Include="Models\Cliente.cs" />
     <Compile Include="Models\Empleado.cs" />
     <Compile Include="Models\Insumo.cs" />
@@ -185,11 +187,6 @@
     <Content Include="Areas\Gerencia\Views\web.config" />
     <Content Include="Areas\Gerencia\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Gerencia\Views\Shared\Error.cshtml" />
-    <Content Include="Areas\Gerencia\Views\Proveedor\Crear.cshtml" />
-    <Content Include="Areas\Gerencia\Views\Proveedor\Editar.cshtml" />
-    <Content Include="Areas\Gerencia\Views\Proveedor\Index.cshtml" />
-    <Content Include="Areas\Gerencia\Views\Proveedor\Nuevo.cshtml" />
-    <Content Include="Areas\Gerencia\Views\Proveedor\Ver.cshtml" />
     <Content Include="Areas\Gerencia\Views\Insumo\Actualizar.cshtml" />
     <Content Include="Areas\Gerencia\Views\Insumo\Crear.cshtml" />
     <Content Include="Areas\Gerencia\Views\Insumo\Editar.cshtml" />
@@ -200,9 +197,6 @@
     <Content Include="Areas\Gerencia\Views\User\Create.cshtml" />
     <Content Include="Areas\Gerencia\Views\User\Edit.cshtml" />
     <Content Include="Areas\Gerencia\Views\User\Login.cshtml" />
-    <Content Include="Areas\Gerencia\Views\Empleado\Index.cshtml" />
-    <Content Include="Areas\Gerencia\Views\Empleado\Create.cshtml" />
-    <Content Include="Areas\Gerencia\Views\Empleado\View.cshtml" />
     <Content Include="Areas\Produccion\Views\web.config" />
     <Content Include="Areas\Produccion\Views\Producto\Actualizar.cshtml" />
     <Content Include="Areas\Produccion\Views\Producto\Editar.cshtml" />
@@ -213,14 +207,6 @@
     <Content Include="Areas\Produccion\Views\Shared\Error.cshtml" />
     <Content Include="Areas\Produccion\Views\Shared\_IntranetLayoutInsumos.cshtml" />
     <Content Include="Areas\Gerencia\Views\Shared\_IntranetLayoutGerencia.cshtml" />
-    <Content Include="Areas\Gerencia\Views\Producto\Actualizar.cshtml" />
-    <Content Include="Areas\Gerencia\Views\Producto\Crear.cshtml" />
-    <Content Include="Areas\Gerencia\Views\Producto\Disenno.cshtml" />
-    <Content Include="Areas\Gerencia\Views\Producto\Editar.cshtml" />
-    <Content Include="Areas\Gerencia\Views\Producto\Index.cshtml" />
-    <Content Include="Areas\Gerencia\Views\Producto\Inventario.cshtml" />
-    <Content Include="Areas\Gerencia\Views\Producto\Nuevo.cshtml" />
-    <Content Include="Areas\Gerencia\Views\Producto\Ver.cshtml" />
     <Content Include="Areas\Insumo\Views\web.config" />
     <Content Include="Areas\Insumo\Views\Insumo\Actualizar.cshtml" />
     <Content Include="Areas\Insumo\Views\Insumo\Crear.cshtml" />
@@ -232,7 +218,6 @@
     <Content Include="Areas\Insumo\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Insumo\Views\Shared\Error.cshtml" />
     <Content Include="Areas\Insumo\Views\Shared\_IntranetLayoutInsumo.cshtml" />
-    <Content Include="Areas\Gerencia\Views\Empleado\Edit.cshtml" />
     <Content Include="Areas\Produccion\Views\Producto\Create.cshtml" />
     <Content Include="Areas\Produccion\Views\Producto\View.cshtml" />
     <Content Include="Areas\Produccion\Views\Recurso\Actualizar.cshtml" />
@@ -248,6 +233,22 @@
     <Content Include="Areas\Insumo\Views\Recurso\Inventario.cshtml" />
     <Content Include="Areas\Insumo\Views\Recurso\View.cshtml" />
     <Content Include="Areas\Produccion\Views\Producto\Edit.cshtml" />
+    <Content Include="Areas\Gerencia\Views\Empleado\Index.cshtml" />
+    <Content Include="Areas\Gerencia\Views\Empleado\View.cshtml" />
+    <Content Include="Areas\Gerencia\Views\Empleado\Edit.cshtml" />
+    <Content Include="Areas\Gerencia\Views\Empleado\Create.cshtml" />
+    <Content Include="Areas\Gerencia\Views\Producto\Index.cshtml" />
+    <Content Include="Areas\Gerencia\Views\Producto\Create.cshtml" />
+    <Content Include="Areas\Gerencia\Views\Producto\Edit.cshtml" />
+    <Content Include="Areas\Gerencia\Views\Producto\View.cshtml" />
+    <Content Include="Areas\Gerencia\Views\Proveedor\Index.cshtml" />
+    <Content Include="Areas\Gerencia\Views\Proveedor\Create.cshtml" />
+    <Content Include="Areas\Gerencia\Views\Proveedor\Edit.cshtml" />
+    <Content Include="Areas\Gerencia\Views\Proveedor\View.cshtml" />
+    <Content Include="Areas\Gerencia\Views\Recurso\Index.cshtml" />
+    <Content Include="Areas\Gerencia\Views\Recurso\Create.cshtml" />
+    <Content Include="Areas\Gerencia\Views\Recurso\Edit.cshtml" />
+    <Content Include="Areas\Gerencia\Views\Recurso\View.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
