Nuevo model y controlador
Inventario preoducto

--- a/MetroUIPrueba2/MetroUIPrueba2.csproj
+++ b/MetroUIPrueba2/MetroUIPrueba2.csproj
@@ -129,6 +129,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Gerencia\Controllers\EmpleadoController.cs" />
     <Compile Include="Areas\Gerencia\Controllers\InsumoController.cs" />
+    <Compile Include="Areas\Gerencia\Controllers\InventarioProductoController.cs" />
     <Compile Include="Areas\Gerencia\Controllers\ProductoController.cs" />
     <Compile Include="Areas\Gerencia\Controllers\ProveedorController.cs" />
     <Compile Include="Areas\Gerencia\Controllers\RecursoController.cs" />
@@ -153,6 +154,7 @@
     <Compile Include="Models\Cliente.cs" />
     <Compile Include="Models\Empleado.cs" />
     <Compile Include="Models\Insumo.cs" />
+    <Compile Include="Models\InventarioProducto.cs" />
     <Compile Include="Models\MooduContext.cs" />
     <Compile Include="Models\Producto.cs" />
     <Compile Include="Models\Proveedor.cs" />
@@ -330,6 +332,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Gerencia\Data\" />
+    <Folder Include="Areas\Gerencia\Views\InventarioProducto\" />
     <Folder Include="Areas\Insumo\Data\" />
     <Folder Include="Areas\Produccion\Data\" />
   </ItemGroup>
