--- a/MetroUIPrueba2/MetroUIPrueba2.csproj
+++ b/MetroUIPrueba2/MetroUIPrueba2.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Almacen.cs" />
     <Compile Include="Models\Cliente.cs" />
+    <Compile Include="Models\CompraInsumo.cs" />
     <Compile Include="Models\Empleado.cs" />
     <Compile Include="Models\Insumo.cs" />
     <Compile Include="Models\InventarioProducto.cs" />
