--- a/MetroUIPrueba2/MetroUIPrueba2.csproj
+++ b/MetroUIPrueba2/MetroUIPrueba2.csproj
@@ -151,14 +151,17 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Almacen.cs" />
+    <Compile Include="Models\CatergoriaInsumo.cs" />
     <Compile Include="Models\Cliente.cs" />
     <Compile Include="Models\CompraInsumo.cs" />
     <Compile Include="Models\Empleado.cs" />
     <Compile Include="Models\Insumo.cs" />
+    <Compile Include="Models\InventarioInsumo.cs" />
     <Compile Include="Models\InventarioProducto.cs" />
     <Compile Include="Models\MooduContext.cs" />
     <Compile Include="Models\Producto.cs" />
     <Compile Include="Models\Proveedor.cs" />
+    <Compile Include="Models\ProveeInsumo.cs" />
     <Compile Include="Models\Recurso.cs" />
     <Compile Include="Models\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
