agregacion de relaciones
agregacion de relaciones

--- a/MetroUIPrueba2/MetroUIPrueba2.csproj
+++ b/MetroUIPrueba2/MetroUIPrueba2.csproj
@@ -153,12 +153,15 @@
     <Compile Include="Models\Almacen.cs" />
     <Compile Include="Models\CatergoriaInsumo.cs" />
     <Compile Include="Models\Cliente.cs" />
+    <Compile Include="Models\ClienteProducto.cs" />
     <Compile Include="Models\CompraInsumo.cs" />
     <Compile Include="Models\Empleado.cs" />
     <Compile Include="Models\Insumo.cs" />
     <Compile Include="Models\InventarioInsumo.cs" />
     <Compile Include="Models\InventarioProducto.cs" />
+    <Compile Include="Models\MedioPago.cs" />
     <Compile Include="Models\MooduContext.cs" />
+    <Compile Include="Models\Pago.cs" />
     <Compile Include="Models\Producto.cs" />
     <Compile Include="Models\Proveedor.cs" />
     <Compile Include="Models\ProveeInsumo.cs" />
