--- a/MetroUIPrueba2/MetroUIPrueba2.csproj
+++ b/MetroUIPrueba2/MetroUIPrueba2.csproj
@@ -169,8 +169,8 @@
     <Compile Include="Models\ProveeInsumo.cs" />
     <Compile Include="Models\Recurso.cs" />
     <Compile Include="Models\Roles.cs" />
-    <Compile Include="Models\TipoUsuario.cs" />
     <Compile Include="Models\Usuario.cs" />
+    <Compile Include="Models\UsuarioInterno.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -312,6 +312,7 @@
     <Content Include="Views\Producto\Create.cshtml" />
     <Content Include="Views\Producto\View.cshtml" />
     <Content Include="Views\Producto\Edit.cshtml" />
+    <Content Include="Views\Home\Prueba.cshtml" />
     <None Include="Views\Shared\_IntranetLayout.xxx" />
     <Content Include="Views\Home\Intranet.cshtml" />
     <Content Include="Views\Producto\Disenno.cshtml" />
